[gd_scene load_steps=11 format=3 uid="uid://khk0o0agsd6w"]

[ext_resource type="Script" path="res://objs/levels_gui.gd" id="1_cgp06"]
[ext_resource type="FontFile" uid="uid://o6iltpv0mnpf" path="res://assets/fonts/exo/Exo-SemiBold.ttf" id="2_ky4dl"]
[ext_resource type="AudioStream" uid="uid://mqefo4s4jeoi" path="res://assets/music/chill.mp3" id="2_wome5"]
[ext_resource type="AudioStream" uid="uid://d440vgxge423" path="res://assets/music/stressed.mp3" id="3_4kmj2"]
[ext_resource type="AudioStream" uid="uid://tdttf0as3d42" path="res://assets/sounds/gasping.mp3" id="4_bh5dg"]
[ext_resource type="AudioStream" uid="uid://bwrdkei1w87nv" path="res://assets/sounds/power_shutdown.mp3" id="5_0nwai"]
[ext_resource type="AudioStream" uid="uid://05a8nxiowfia" path="res://assets/sounds/death_by_starvation.mp3" id="5_en4e6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1ly6"]
bg_color = Color(0.521569, 0.521569, 0, 1)
border_color = Color(1, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2808i"]
bg_color = Color(0, 0.270588, 0.270588, 1)
border_color = Color(1, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fnq3b"]
bg_color = Color(0, 0.270588, 0, 1)
border_color = Color(1, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="levels_gui" type="CanvasLayer"]
script = ExtResource("1_cgp06")

[node name="margin" type="MarginContainer" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 4.0
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8

[node name="vbox" type="VBoxContainer" parent="margin"]
layout_mode = 2

[node name="objectives" type="Label" parent="margin/vbox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("2_ky4dl")
theme_override_font_sizes/font_size = 12

[node name="hbox" type="HBoxContainer" parent="margin/vbox"]
layout_mode = 2

[node name="energy" type="ProgressBar" parent="margin/vbox/hbox"]
custom_minimum_size = Vector2(16, 300)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_q1ly6")
value = 100.0
fill_mode = 3
show_percentage = false

[node name="oxygen" type="ProgressBar" parent="margin/vbox/hbox"]
custom_minimum_size = Vector2(16, 300)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_2808i")
value = 100.0
fill_mode = 3
show_percentage = false

[node name="food" type="ProgressBar" parent="margin/vbox/hbox"]
custom_minimum_size = Vector2(16, 300)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_fnq3b")
value = 100.0
fill_mode = 3
show_percentage = false

[node name="energy_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="oxygen_timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="food_timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="music_chill" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_wome5")
volume_db = -17.0
autoplay = true

[node name="music_stressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4kmj2")
volume_db = -17.0

[node name="audio_gasping" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_bh5dg")
volume_db = -13.0

[node name="audio_starvation" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_en4e6")
volume_db = -19.0

[node name="audio_power_shutdown" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_0nwai")
volume_db = -15.0

[node name="game_over_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="game_over_menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="game_over_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.0
offset_top = -110.0
offset_right = 6.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.95637, 1.79921)
color = Color(0, 0.462745, 0.592157, 1)

[node name="vbox" type="VBoxContainer" parent="game_over_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.5
offset_top = -80.0
offset_right = 101.5
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="Label" parent="game_over_menu/vbox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 32
text = "Game Over"
horizontal_alignment = 1

[node name="message" type="Label" parent="game_over_menu/vbox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 3
text = " 
 
 "
horizontal_alignment = 1

[node name="spacer" type="Label" parent="game_over_menu/vbox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 3
text = " "
horizontal_alignment = 1

[node name="menu2" type="Label" parent="game_over_menu/vbox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 3
text = "[R] restart                [Q] quit"
horizontal_alignment = 1

[connection signal="timeout" from="energy_timer" to="." method="_on_energy_timer_timeout"]
[connection signal="timeout" from="oxygen_timer" to="." method="_on_oxygen_timer_timeout"]
[connection signal="timeout" from="food_timer" to="." method="_on_food_timer_timeout"]
[connection signal="timeout" from="game_over_timer" to="." method="_on_game_over_timer_timeout"]
